# terminal-news

./: .gitignore  Cargo.toml  README.md
parameters/: settings.json
parameters_folder/: parameters.json
src/: main.rs  news_mod.rs  set_key.rs  settings.rs
