[package]
name = "terminal-news"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
online = "3.0.1"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0.0"
dialoguer = "0.10.2"
console = "0.15.1"
clearscreen = "1.0.10"

[profile.release]
opt-level = "z"
codegen-units = 1
panic = "abort"
